# libb2-cmake-test

./: CMakeLists.txt  README.md
.github/workflows/: linux.yml  msvc.yml  windows.yml
cmake/: FindBlake2.cmake  FindGTest.cmake
test/: CMakeLists.txt  blake2s_test.cpp  blake2s_wrapper.hpp
