######################################################################################
## CMake Project
######################################################################################
cmake_minimum_required(VERSION 3.8)
project(libb2-cmake-test)


######################################################################################
## Append cmake modules path
######################################################################################
list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)


######################################################################################
## Add tests
######################################################################################
add_subdirectory(test)